--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,28 @@
 <resources>
     <string name="app_name">RobuxEarny</string>
     <string name="welcome">Welcome!</string>
-    <string name="welcome_desc">"
-Welcome to RobuxEarny! An user-friendly application where you can effortlessly earn Robux!\nYou just need to play a very simple scratch card game, It's completely free and you will be able to redeem your robux by accumulating your coins!"</string>
+    <string name="welcome_desc">\nWelcome to RobuxEarny! An user-friendly application where you can effortlessly earn Robux! You just need to play a very simple scratch card game, It\'s completely free and you will be able to redeem your robux by accumulating your coins!</string>
     <string name="coinsystem">Coin System</string>
-    <string name="coinsystem_desc">"
-This app has a special coin system with six packages.\nEach package comes with a different amount of coins.\nBy playing fun scratch cards, you can earn coins.\nThe more coins you earn, the more packages you can unlock.\nThis means you'll have more chances to earn Robux! It's a simple way to earn Robux and have fun along the way!"</string>
     <string name="ready">Are you ready?</string>
-    <string name="ready_desc">"
-When you are ready press the start button below and start right now to earn a lot of Robux!\m
-In order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
     <string name="current_points">Current Points: %d</string>
     <string name="done">Done!</string>
     <string name="load">App is done loading in %d</string>
-    <string name="splash_activity_image_text">Splash Activity Image</string>
-    <string name="splash_activity_text">RobuxEarny</string>
+    <string name="splash_activity_image_text" translatable="false">Splash Activity Image</string>
+    <string name="splash_activity_text" translatable="false">RobuxEarny</string>
     <string name="redeem_robux">Redeem Robux</string>
-    <string name="roblox_username">Username</string>
     <string name="start">Start</string>
     <string name="ticket_finish">Please finish your current ticket first.</string>
     <string name="play">Play</string>
-    <string name="x">X</string>
-    <string name="winning_numbers">Winning numbers: %s</string>
+    <string name="x" translatable="false">"?"</string>
     <string name="total_points">Total points: %d</string>
-    <string name="new_ticket">New ticket (AD)</string>
+    <string name="new_ticket">New ticket</string>
     <string name="web_client_id" translatable="false">1085849240516-4r0330jokf9873h6jtccud2b26mnhdni.apps.googleusercontent.com</string>
+    <string name="earn_robux">Earn a lot of points and redeem Robux!</string>
+    <string name="start_earning">Start earning</string>
+    <string name="invite_a_friend">Invite a friend</string>
+    <string name="settings">Settings</string>
+    <string name="description">The best and fastest app for earning Robux</string>
+    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing fun scratch cards, you can earn coins. The more coins you earn, the more packages you can unlock. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
+    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\\n In order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
+    <string name="winning_numbers">Winning numbers: %s</string>
 </resources>
