--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">RobuxEarny</string>
     <string name="welcome">Welcome!</string>
-    <string name="welcome_desc">\nWelcome to RobuxEarny! An user-friendly application where you can effortlessly earn Robux! You just need to play a very simple scratch card game, It\'s completely free and you will be able to redeem your robux by accumulating your coins!</string>
+    <string name="welcome_desc">\nWelcome to RobuxEarny! An user-friendly application where you can effortlessly earn Robux!\nYou just need to play some very simple mini games, It\'s completely free and you will be able to redeem your robux by accumulating your coins!</string>
     <string name="coinsystem">Coin System</string>
     <string name="ready">Are you ready?</string>
     <string name="current_points">Current Points: %d</string>
@@ -22,8 +22,8 @@
     <string name="invite_a_friend">Invite a friend</string>
     <string name="settings">Settings</string>
     <string name="description">The best and fastest app for earning Robux</string>
-    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing fun scratch cards, you can earn coins. The more coins you earn, the more packages you can unlock. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
-    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\\n In order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
+    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing fun scratch cards, you can earn coins. The more coins you earn, the more packages you can unlock. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
+    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\nIn order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
     <string name="winning_numbers">Winning numbers: %s</string>
     <string name="delivery">Delivery: 1–2 days</string>
     <string name="basic_package" translatable="false">Basic Package</string>
@@ -57,4 +57,5 @@
     <string name="account_deleted">Account successfully deleted.</string>
     <string name="logout_from_your_account">Logout from your account</string>
     <string name="logout" translatable="false">Logout</string>
+    <string name="spin" translatable="false">SPIN</string>
 </resources>
