--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -49,4 +49,5 @@
     <string name="discord_desc">Entra nel nostro server Discord per guadagnare Robux</string>
     <string name="contact_us">Contattaci</string>
     <string name="logout_from_your_account">Esci dal tuo account</string>
+    <string name="enter_referral_code">Enter Referral Code</string>
 </resources>
