--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="settings">Settings</string>
     <string name="description">The best and fastest app for earning Robux</string>
     <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing our mini games, you can earn coins. The more coins you earn, the more packages you can redeem. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
-    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\nIn order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
+    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\nIf you have a referral code from a friend write it down there for receiving a bonus\nIn order to send you the Robux don't forget to click on the ads as much as you can.\n"</string>
     <string name="winning_numbers">Winning numbers: %s</string>
     <string name="delivery">Delivery: 1–2 days</string>
     <string name="basic_package" translatable="false">Basic Package</string>
@@ -60,4 +60,10 @@
     <string name="spin" translatable="false">SPIN</string>
     <string name="share">Share your code</string>
     <string name="enter_referral_code">Enter Referral Code</string>
+    <string name="login_success">Login Success!</string>
+    <string name="ref_desc">Earn 60 coins everytime somebody uses your referral code!</string>
+    <string name="login_error">Login error, please try again</string>
+    <string name="robuxearny_referral_code">RobuxEarny Referral Code</string>
+    <string name="robuxearny_referral_desc">"This is my RobuxEarny's referral code: %s, download the app from Google Play and get a coin bonus!"</string>
+    <string name="share_referral_code">Share Referral Code</string>
 </resources>
