--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="ready">Are you ready?</string>
     <string name="current_points">Current Coins: %d</string>
     <string name="done">Done!</string>
-    <string name="load">App is done loading in %d</string>
+    <string name="load">Robux Earny is done loading in %d</string>
     <string name="splash_activity_image_text" translatable="false">Splash Activity Image</string>
     <string name="splash_activity_text" translatable="false">RobuxEarny</string>
     <string name="redeem_robux">Redeem Robux</string>
@@ -22,7 +22,7 @@
     <string name="invite_a_friend">Invite a friend</string>
     <string name="settings">Settings</string>
     <string name="description">The best and fastest app for earning Robux</string>
-    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing our mini games, you can earn coins. The more coins you earn, the more packages you can redeem. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
+    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing our mini-games, you can earn coins. The more coins you earn, the more packages you can redeem. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!</string>
     <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\nIf you have a referral code from a friend write it down there for receiving a bonus\nIn order to send you the Robux don't forget to click on the ads as much as you can.\nThis app is still in beta but in the future we will add much more games!\n"</string>
     <string name="winning_numbers">Winning numbers: %s</string>
     <string name="delivery">Delivery: 1–2 days</string>
@@ -45,7 +45,7 @@
     <string name="delete_your_robuxearny_account">Delete your RobuxEarny account</string>
     <string name="about">About</string>
     <string name="github_repository">GitHub repository</string>
-    <string name="repository">fakeexception/RobuxEarny</string>
+    <string name="repository" translatable="false">fakeexception/RobuxEarny</string>
     <string name="discord_server">Discord server</string>
     <string name="discord_desc">Join our Robux earning Discord server</string>
     <string name="mail" translatable="false">info@robuxrush.com</string>
@@ -61,7 +61,7 @@
     <string name="share">Share your code</string>
     <string name="enter_referral_code">Enter Referral Code</string>
     <string name="login_success">Login Success!</string>
-    <string name="ref_desc">Earn 200 coins everytime somebody uses your referral code!</string>
+    <string name="ref_desc">Earn 200 coins every time somebody uses your referral code!</string>
     <string name="login_error">Login error, please try again</string>
     <string name="robuxearny_referral_code">RobuxEarny Referral Code</string>
     <string name="robuxearny_referral_desc">"This is my RobuxEarny's referral code: %s, download the app from Google Play and get a coin bonus!"</string>
@@ -75,6 +75,16 @@
     <string name="qst_desc2">A: Your coins will be saved only after you finish watching an ad video.</string>
     <string name="qst3">Q: When are the Robux sent?</string>
     <string name="qst_desc3">A: The Robux will be sent to you normally in 1–2 days, but there may be variations.</string>
-    <string name="qst4">Q: How can i contact you?</string>
+    <string name="qst4">Q: How can I contact you?</string>
     <string name="qst_desc4">A: Compile the contact form on our website https://robuxrush.com</string>
+    <string name="the_referral_code_is_not_valid">The referral code is not valid</string>
+    <string name="feedback">Feedback</string>
+    <string name="send_us_a_feedback">Send us a feedback</string>
+    <string name="feedback_desc">Enter your feedback here, max 512 chars</string>
+    <string name="feedback_sent">Feedback submitted successfully!</string>
+    <string name="cancel">Cancel</string>
+    <string name="submit">Submit</string>
+    <string name="send_feedback">Send Feedback</string>
+    <string name="no">No</string>
+    <string name="congratulations_you_won_a_20_points_bonus">Congratulations! You won a 20 points bonus!</string>
 </resources>
